<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dp"
    android:id="@+id/mainLayout"
    >
    <TextView
        android:id="@+id/themeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:textAllCaps="true"
        android:text="@string/theme"
        android:layout_marginBottom="2dp"
        ></TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/silver"
        ></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:id="@+id/themeTurnLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_turn"
            ></TextView>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            ></View>
        <CheckBox 
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/chbTheme"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:id="@+id/showImagesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_images"
            ></TextView>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            ></View>
        <CheckBox 
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/chbImages"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
           android:id="@+id/tvMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode"
            ></TextView>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            ></View>
        <ToggleButton
            android:id="@+id/chkState"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/toggle_selector"
            android:textOff=""
            android:textOn=""/>
    </LinearLayout>
<TextView
    android:id="@+id/cleanLabel"
    android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:textAllCaps="true"
        android:text="@string/clean"
        android:layout_marginBottom="2dp"
        ></TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/silver"
        ></View>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:id="@+id/cleanCacheLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean_cache"
            ></TextView>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            ></View>
        <Button
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/btnCleanCache"
            android:text="@string/remove"
            />
    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:id="@+id/cleanFavLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean_favorite"
            ></TextView>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            ></View>
        <Button
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/btnCleanFav"
            android:text="@string/remove"
            />
    </LinearLayout>
      
    
</LinearLayout>
